--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -35,6 +35,7 @@ body {
   }
 }
 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -43,8 +44,8 @@ body {
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 25 95% 49%; /* Updated to match #F46906 */
-    --primary2: 221 83% 53%; /* Updated to match #2563EB */
+    --primary: 221.2 83.2% 53.3%;
+    --primary2: 221.2 83.3% 53.3%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -56,9 +57,9 @@ body {
     --destructive-foreground: 210 40% 98%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 25 95% 49%; /* Updated to match #F46906 */
-    --ring2: 221 83% 53%; /* Updated to match #2563EB */
-    --radius: 0.9rem;
+    --ring: 221.2 83.2% 53.3%;
+    --ring2: 221.2 83.3% 53.3%;
+    --radius: 0.65rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -73,8 +74,8 @@ body {
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 25 95% 49%; /* Updated to match #F46906 */
-    --primary2: 221 83% 53%; /* Updated to match #2563EB */
+    --primary: 217.2 91.2% 59.8%;
+    --primary2: 217.2 91.2% 59.8%;
     --primary-foreground: 222.2 47.4% 11.2%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
@@ -86,8 +87,8 @@ body {
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
-    --ring: 25 95% 49%; /* Updated to match #F46906 */
-    --ring2: 221 83% 53%; /* Updated to match #2563EB */
+    --ring: 224.3 76.3% 48%;
+    --ring2: 224.3 76.3% 48%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -95,6 +96,7 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
+
 
 @layer base {
   * {
